--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row sk8er-row">
         <div class="col-md-8">
           <!--nested row to create layout-->
           <div class="row">
             <div class="col-md-4">
-              <p>LANCE MOUNTAIN</p>
+              <p class="skater1">LANCE MOUNTAIN</p>
             </div>
             <div class="col-md-4">
-              <p>RODNEY MULLEN</p>
+              <p class="skater2">RODNEY MULLEN</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <p>TOMMY GUERRERO</p>
+          <p class="skater3">TOMMY GUERRERO</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-8">
-          <p>STEVE CABALLERO</p>
+          <p class="skater4">STEVE CABALLERO</p>
         </div>
 
       </div>
