more layout work

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     </header>
 
     <div class="container">
-      <div class="row row-col">
+      <div class="row headbutton-row">
         <div class="col-md-3 headbutton-col">
-          <p class="headbutton">SK8T NEWS</p>
+          <a class="headbutton">SK8T NEWS</a>
         </div>
         <div class="col-md-3 headbutton-col">
-          <p class="headbutton">SKATEBOARDERS</p>
+          <a class="headbutton">SKATEBOARDERS</a>
         </div>
         <div class="col-md-3 headbutton-col">
-          <p class="headbutton">BOARD DESIGN</p>
+          <a class="headbutton">BOARD DESIGN</a>
         </div>
         <div class="col-md-3 headbutton-col">
-          <p class="headbutton">CONTACT US</p>
+          <a class="headbutton">CONTACT US</a>
         </div>
 
       </div>
-      <div class="row">
+      <div class="row banner-photo-row">
         <div class="col-md-12">
           <div class="banner1">
 
@@ -42,7 +42,7 @@
       <div class="row pg-1-row">
         <div class="col-md-4 col-pg-1">
           <div class="pg-1">
-            <h1>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h1>
+            <h1>Tony Hawk Foundation Raises Big Money At <br>Celeb Fundraiser</h1>
             <p>October 10, 2013</p>
             <p>It was just over 90 Degrees in Los Angeles, but that didn't stop the throns from coming out to celebrate the 10th Annual Tony Hawk's Stand Up For Skateparks Benefit Presented by SLS Hotel & Casino Las Vegas on Saturday at the Green Acres Estate
               in Beverly Hills</p>
@@ -72,23 +72,20 @@
         <div class="col-md-8">
           <!--nested row to create layout-->
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <p class="skater1">LANCE MOUNTAIN</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <p class="skater2">RODNEY MULLEN</p>
+            </div>
+            <div class="col-md-12">
+              <p class="skater4">STEVE CABALLERO</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <p class="skater3">TOMMY GUERRERO</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-8">
-          <p class="skater4">STEVE CABALLERO</p>
-        </div>
-
       </div>
 
       <div class="row skateboard_row">
