Desktop layout almost done

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css">
   <link rel="stylesheet" href="css/styles.css">
-  <title></title>
+  <title>Skateboards</title>
 </head>
 
 <body>
@@ -13,7 +14,18 @@
 
     </header>
 
-    <div class="container">
+    <div class="container maincontainer">
+      <header class="navigationheader">
+        <p>Subscribe</p>
+        <section class="navbuttonstop">
+          <i id="facebook" class="fa fa-facebook-official" aria-hidden="true"></i>
+          <i id="rss" class="fa fa-rss-square" aria-hidden="true"></i>
+          <i id="twitter" class="fa fa-twitter-square" aria-hidden="true"></i>
+          <i id="youtube" class="fa fa-youtube-square" aria-hidden="true"></i>
+        </section>
+      </header>
+
+
       <div class="row headbutton-row">
         <div class="col-md-3 headbutton-col">
           <a class="headbutton">SK8T NEWS</a>
