Desktop layout completed, need to add queries

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                 <input type="Email" class="form-control" placeholder="EMAIL">
               </div>
               <div class="form-group">
-                <textarea name="Message" rows="6" cols="72" placeholder="YOUR MESSAGE"></textarea>
+                <textarea id="specialid" class="form-control" "name="Message " rows="6 " placeholder="YOUR MESSAGE "></textarea>
               </div>
 
-              <button id="buttonbottom" type="submit" class="btn btn-default">Submit</button>
+              <button id="buttonbottom " type="submit " class="btn btn-default ">Submit</button>
             </form>
           </section>
         </div>
