--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
       </div>
 
-      <div class="row skateboard_row">
+      <div class="row">
         <div class="col-md-12">
           <div class="tenboards">
             <img src="skateboard-images/sk8-1.png" alt="Skateboard">
@@ -122,7 +122,7 @@
 
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 specialcol1">
           <section class="bottomsection">
 
             <section class="bottomtext">
@@ -134,20 +134,22 @@
 
 
             </section>
-            <form class="bigform">
-              <div class="form-group">
-                <input type="Name" class="form-control" placeholder="NAME">
-              </div>
-              <div class="form-group">
-                <input type="Email" class="form-control" placeholder="EMAIL">
-              </div>
-              <div class="form-group">
-                <textarea id="specialid" class="form-control" "name="Message " rows="6 " placeholder="YOUR MESSAGE "></textarea>
-              </div>
-
-              <button id="buttonbottom " type="submit " class="btn btn-default ">Submit</button>
-            </form>
           </section>
+        </div>
+        <div class="col-md-6 specialcol2">
+          <form class="bigform">
+            <div class="form-group">
+              <input type="Name" class="form-control" placeholder="NAME">
+            </div>
+            <div class="form-group">
+              <input type="Email" class="form-control" placeholder="EMAIL">
+            </div>
+            <div class="form-group">
+              <textarea id="specialid" class="form-control" name="Message " rows="6 " placeholder="YOUR MESSAGE "></textarea>
+            </div>
+
+            <button id="button_one" type="submit ">Submit</button>
+          </form>
         </div>
 
       </div>
