--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 
   </main>
-  <!-- <script type="text/javascript" src="main.js"></script> -->
+  <script type="text/javascript" src="main.js"></script>
 </body>
 
 
