--- a/index.html
+++ b/index.html
@@ -122,43 +122,48 @@
 
       </div>
       <div class="row">
-        <div id="bottomrow-special">
-          <!--inline style to override bootstrap padding-->
-          <div class="col-md-6 specialcol1" style="padding-right: 0px">
-            <section id="bottomsection">
+        <div class="col-md-12">
+          <div class="bg-white clearfix">
 
-              <section class="bottomtext">
+            <!-- <div id="bottomrow-special" class="clearfix"> -->
+            <!--inline style to override bootstrap padding-->
+            <div class="col-md-6 specialcol1">
+              <section id="bottomsection">
+
+                <section class="bottomtext">
 
 
-                <h3>Contact Us for More Information</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                  aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <section class="bottom-buttons-nav">
-                  <a href="#" id="facebook" class="fa fa-facebook-official" aria-hidden="true"></a>
-                  <a href="#" id="rss" class="fa fa-rss-square" aria-hidden="true"></a>
-                  <a href="#" id="twitter" class="fa fa-twitter-square" aria-hidden="true"></a>
-                  <a href="#" id="youtube" class="fa fa-youtube-square" aria-hidden="true"></a>
+                  <h3>Contact Us for More Information</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <section class="bottom-buttons-nav">
+                    <a href="#" id="facebook" class="fa fa-facebook-official" aria-hidden="true"></a>
+                    <a href="#" id="rss" class="fa fa-rss-square" aria-hidden="true"></a>
+                    <a href="#" id="twitter" class="fa fa-twitter-square" aria-hidden="true"></a>
+                    <a href="#" id="youtube" class="fa fa-youtube-square" aria-hidden="true"></a>
+                  </section>
+
                 </section>
 
               </section>
+            </div>
+            <!--inline style to override bootstrap padding-->
+            <div class="col-md-6 specialcol2">
+              <form id="bigform">
+                <div class="form-group">
+                  <input type="Name" class="form-control" placeholder="NAME">
+                </div>
+                <div class="form-group">
+                  <input type="Email" class="form-control" placeholder="EMAIL">
+                </div>
+                <div class="form-group">
+                  <textarea id="specialid" class="form-control" name="Message " rows="6 " placeholder="YOUR MESSAGE "></textarea>
+                </div>
 
-            </section>
-          </div>
-          <!--inline style to override bootstrap padding-->
-          <div class="col-md-6 specialcol2" style="padding-left: 0px">
-            <form id="bigform">
-              <div class="form-group">
-                <input type="Name" class="form-control" placeholder="NAME">
-              </div>
-              <div class="form-group">
-                <input type="Email" class="form-control" placeholder="EMAIL">
-              </div>
-              <div class="form-group">
-                <textarea id="specialid" class="form-control" name="Message " rows="6 " placeholder="YOUR MESSAGE "></textarea>
-              </div>
-
-              <button id="button_one" type="submit ">Submit</button>
-            </form>
+                <button id="button_one" type="submit ">Submit</button>
+              </form>
+            </div>
+            <!-- </div> -->
           </div>
         </div>
       </div>
@@ -168,7 +173,9 @@
 
 
   </main>
-  <script type="text/javascript" src="main.js"></script>
+
+  <!-- experimental JS -->
+  <!-- <script type="text/javascript" src="main.js"></script> -->
 </body>
 
 
